<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_emphome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/toolbar_inventory"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <com.Tejaysdr.msrc.customviews.CustomTextView
            android:id="@+id/in_empname"
            style="@style/CenturyGothic_regular_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/green"
            android:textSize="25dp"
            android:visibility="gone" />

        <TextView
           android:fontFamily="@font/montserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/inventory"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#7ab4a5"
                android:onClick="goInventorylist"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/paper_billing_bg"
                    android:visibility="gone" />

                <TextView
                    android:fontFamily="@font/montserrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/inventorylist"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                   />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#7ab4a5"
                android:onClick="goAssignedmaterials"
                android:visibility="visible"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/temple_seva_bg"
                    android:visibility="gone" />

                <TextView
                    android:fontFamily="@font/montserrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/indent1"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#7ab4a5"
                android:onClick="goIndent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/temple_seva_bg"
                    android:visibility="gone" />

                <TextView
                    android:fontFamily="@font/montserrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/indent"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#7ab4a5"
                android:onClick="goIndentlist">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/temple_seva_bg"
                    android:visibility="gone" />

                <TextView
                    android:fontFamily="@font/montserrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/indent2"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    />
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

 <!--   <include layout="@layout/sign_out" />-->
</LinearLayout>
