<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_emphome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar_requstmaterial"
        app:titleTextColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="@dimen/_5dp"
        android:layout_marginBottom="60dp">

        <TextView
            android:id="@+id/in_empname"
            style="@style/CenturyGothic_regular_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/_5dp"
            android:layout_marginBottom="10dp"
            android:padding="@dimen/_5dp"
            android:textColor="@color/green"
            android:textSize="25dp" />

        <TextView
            android:fontFamily="@font/montserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newinventory1"
            android:textSize="25dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:padding="@dimen/_5dp"
                    android:id="@+id/li_inventory_item"
                    android:background="@drawable/spinnerbackground">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="Material"
                        android:paddingLeft="@dimen/_5dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/montserrat_bold"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:fontFamily="@font/montserrat"
                        android:id="@+id/inventory_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:paddingTop="15dp"
                        android:layout_weight="1.5"
                        style="@style/Widget.AppCompat.Spinner.Underlined"/>
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:visibility="gone"
                        android:src="@drawable/spinnerdropdown" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:padding="@dimen/_5dp"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:fontFamily="@font/montserrat"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/requiredinventory"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_weight="1.3"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/_5dp"
                        android:gravity="left|center"
                        android:textSize="16sp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_Quality"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <EditText
                            android:id="@+id/Quality"
                            android:fontFamily="@font/montserrat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:maxLength="5"
                            android:hint="Qty"
                            android:textColor="@color/green"
                            android:inputType="number"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/lay_date_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:onClick="openDateCalendar"
                    android:padding="5dp"
                    android:background="@drawable/spinnerbackground">

                    <TextView
                        android:id="@+id/cst_required"
                        style="@style/CenturyGothic_regular_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:paddingLeft="@dimen/_5dp"
                        android:text="@string/required_On"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                    <!-- <View
                         android:layout_width="40dp"
                         android:layout_height="match_parent"
                         android:layout_toStartOf="@id/selectdate"
                         android:layout_toEndOf="@id/cst_required"/>-->
                    <TextView
                        android:id="@+id/selectdate"
                        style="@style/CenturyGothic_regular_font"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="5dp"
                        android:layout_toStartOf="@id/ic_calender"
                        android:layout_toEndOf="@id/cst_required"
                        android:background="@drawable/spinnerbackground"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:text="adaafafaf"
                        android:textColor="@color/green"
                        android:textSize="18dp" />

                    <ImageView
                        android:id="@+id/ic_calender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@android:drawable/ic_menu_my_calendar" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:padding="@dimen/_5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/spinnerbackground"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Purpose"
                        android:textColor="@color/black"
                        android:paddingLeft="@dimen/_5dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/montserrat_bold"/>

                    <Spinner
                        android:id="@+id/inventory_complaint"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1.5"
                        android:entries="@array/complaints"
                        android:fontFamily="@font/montserrat"
                        android:gravity="left"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:visibility="gone"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:src="@drawable/spinnerdropdown" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lay_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:fontFamily="@font/montserrat_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/remarks"
                        android:paddingLeft="@dimen/_5dp"
                        android:textSize="16dp"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_remarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="@dimen/_5dp"
                        android:layout_marginBottom="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <EditText
                            android:id="@+id/remarks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:fontFamily="@font/montserrat"
                            android:hint="Enter Remarks....."
                            android:textColor="@color/green"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/tvPaymentName"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:layout_margin="10dp"
                    android:theme="@style/AppTheme.Button"
                    android:onClick="submit"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <!-- <include layout="@layout/sign_out" />-->
</LinearLayout>
